kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-native-order-processor
  labels:
    name: cloud-native-order-processor
